refactor: migrate MetalstormClient from JSoup to Playwright